welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:26: error: type mismatch;
 found   : Unit
 required: Boolean
		if (d())
                     ^ZigZag:35: error: type mismatch;
 found   : Unit
 required: Boolean
		if (g())
                     ^